# f1-api

./: .gitignore  .markdownlint.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  appveyor.yml  config.yml  diesel.toml  docker-compose.yml  spec.yml  taskfile.yml  test.Dockerfile
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  manual_update.yml  rust.yml  update.yml
api/: Cargo.toml
api-cmd/: Cargo.toml
api/src/: constructors.rs  drivers.rs  error.rs  handler.rs  lib.rs  seasons.rs  standings.rs
application/: Cargo.toml  diesel.toml
application/src/: constructor_standing.rs  constructors.rs  driver.rs  driver_standing.rs  drivers.rs  lib.rs  models.rs  race.rs  races.rs  schema.rs  seasons.rs
crates/api/: Cargo.toml
crates/api/src/: circuit.rs  circuits.rs  constructor.rs  constructor_standing.rs  constructor_standings.rs  constructors.rs  driver.rs  driver_standing.rs  driver_standings.rs  drivers.rs  extension.rs  fallbacks.rs  laps.rs  lib.rs  pit_stops.rs  races.rs  seasons.rs  standings.rs  status.rs
crates/api/src/catchers/: mod.rs
crates/api/src/fairings/: helmet.rs  mod.rs  rate_limiter.rs
crates/api/src/graphql/: circuit.rs  constructor.rs  constructor_standing.rs  driver.rs  driver_standing.rs  lap_time.rs  mod.rs  pit_stop.rs  race.rs  season.rs  status.rs
crates/api/src/guards/: rate_limiter.rs
crates/api/src/handlers/: circuits.rs  constructor_standings.rs  constructors.rs  driver_standings.rs  drivers.rs  laps.rs  mod.rs  pit_stops.rs  races.rs  seasons.rs  status.rs
crates/api/src/middlewares/: cache.rs  mod.rs  rate_limiter.rs
crates/api/src/tests/: circuits.rs  constructor_standings.rs  constructors.rs  driver_standings.rs  drivers.rs  laps.rs  mod.rs  pit_stops.rs  races.rs  seasons.rs  status.rs
crates/api/src/tests/common/: macros.rs  mod.rs  models.rs
crates/api/tests/: circuits.rs  constructor_standings.rs  constructors.rs  driver_standings.rs  laps.rs
crates/api/tests/common/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: _graphql.rs  circuit.rs  circuits.rs  constructor.rs  constructor_standing.rs  constructor_standings.rs  constructors.rs  driver.rs  driver_standing.rs  driver_standings.rs  drivers.rs  graphql.rs  iden.rs  lap_time.rs  laps.rs  lib.rs  models.rs  pagination.rs  pit_stop.rs  pit_stops.rs  race.rs  races.rs  schema.rs  season.rs  seasons.rs  sql.rs  status.rs
crates/application/src/entities/: circuits.rs  constructor_results.rs  constructor_standings.rs  constructors.rs  driver_standings.rs  drivers.rs  lap_times.rs  mod.rs  pit_stops.rs  prelude.rs  qualifying.rs  races.rs  results.rs  seasons.rs  sprint_results.rs  status.rs
crates/application/src/graphql/: circuit.rs  constructor_standing.rs  mod.rs
crates/application/src/surreal/: circuits.rs  constructor_standings.rs  constructors.rs  mod.rs
crates/application/src/tests/: circuit.rs
crates/derives/: Cargo.toml
crates/derives/src/: filter_validation.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  error.rs  lib.rs  pool.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  filters.rs  lib.rs  models.rs  parameters.rs  responses.rs
crates/shared/src/models/: graphql.rs  mod.rs  response.rs  sql.rs  surreal.rs
database/: Cargo.toml
database/src/: lib.rs
derives/: Cargo.toml
derives/src/: filter_validation.rs  lib.rs
infrastructure/: Cargo.toml
infrastructure/src/: error.rs  lib.rs
infrastructure/src/migrations/: up.sql
resources/dockerfiles/database/: Dockerfile
resources/dockerfiles/scripts/: run_integration_test.sh  run_integration_tests.sh
resources/dockerfiles/test/: Dockerfile  config.yml
resources/dockerfiles/test/windows/: config.yml
shared/: Cargo.toml
shared/src/: error.rs  filters.rs  lib.rs  models.rs  parameters.rs  responses.rs
src/: main.rs  standing.rs
src/database/: constructor_standing.rs  driver_standing.rs  mod.rs  models.rs  race.rs  schema.rs
src/livetiming/: mod.rs  signalr.rs
tests-integration/: Cargo.toml
tests-integration/tests/: circuits.rs  drivers.rs  lib.rs
tests-integration/tests/common/: mod.rs
