[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.dependencies]
time = { version = "0.3.36", features = [
    "serde",
    "std",
    "parsing",
    "macros",
    "formatting",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sea-query = { version = "0.30.7", default-features = false, features = [
    "derive",
    "backend-mysql",
] }
r2d2 = "0.8.10"
mysql = { version = "25.0.1", default-features = false, features = ["minimal"] }
mysql_common = { version = "0.32.4", default-features = false, features = [
    "time",
    "derive",
    "bigdecimal",
] }
log = { version = "0.4.22", features = ["std"] }
axum = { version = "0.7.5", default-features = false, features = [
    "json",
    "tokio",
    "query",
    "http1",
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
figment = { version = "0.10.19", default-feature = false, features = ["yaml"] }
async-graphql = { version = "7.0.6", features = ["time"] }
async-graphql-axum = "7.0.6"
