[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.dependencies]
time = { version = "0.3.36", features = [
    "serde",
    "std",
    "parsing",
    "macros",
    "formatting",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
bb8 = "0.8.5"
async-trait = "0.1.80"
surrealdb = { version = "1.5.3", default-features = false, features = [
    "protocol-http",
] }
surql = { git = "https://github.com/thibault-cne/surql.git", branch = "master" }
log = { version = "0.4.22", features = ["std"] }
axum = { version = "0.7.5", default-features = false, features = [
    "json",
    "tokio",
    "query",
    "http1",
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
figment = { version = "0.10.19", default-feature = false, features = ["yaml"] }
async-graphql = { version = "7.0.6", features = ["time"] }
async-graphql-axum = "7.0.6"
