[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
serde_json = "1.0.64"
dotenvy = "0.15.7"
r2d2 = "0.8.10"

application = { path = "../application" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }