[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31" }
reqwest = { version = "0.11.3", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
serde_json = "1.0.111"
dotenvy = "0.15.7"