[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
log.workspace = true
axum.workspace = true
tower.workspace = true
tokio.workspace = true

application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

http-body-util = "0.1.0"
