[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time.workspace = true
log.workspace = true
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
redis.workspace = true
async-graphql.workspace = true

http-body-util = "0.1.0"

application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
async-graphql-axum = "7.0.5"

[dev-dependencies]
serde.workspace = true

tower = "0.4.13"
