[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query.workspace = true
mysql.workspace = true
serde.workspace = true
async-graphql.workspace = true
time.workspace = true

infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
