[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8.workspace = true
figment.workspace = true
serde.workspace = true
async-graphql.workspace = true
surrealdb.workspace = true
async-trait.workspace = true

shared = { path = "../shared" }
