[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket.workspace = true
chrono.workspace = true
diesel.workspace = true
serde_json.workspace = true
r2d2.workspace = true
serde.workspace = true

derives.workspace = true
