[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time.workspace = true
serde_json.workspace = true
serde.workspace = true
surrealdb.workspace = true
log.workspace = true
bb8.workspace = true
axum.workspace = true
figment.workspace = true
async-graphql.workspace = true
